--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,6 @@
 <html lang=nl>
 <meta charset=utf8>
 <meta name=viewport content=width=device-width,initial-scale=1>
-<link rel=icon href="<%= BASE_URL %>favicon.ico">
+<link rel=icon href=data:image/x-icon;,>
 <title>frontend-input</title>
 <div id=app></div>
