--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang=nl>
 <meta charset=utf8>
-<meta name=viewport content=width=device-width,initial-scale=1>
+<meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=icon href=data:image/x-icon;,>
 <title>frontend-input</title>
 <div id=app></div>
